--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,26 @@ h1 {
   white-space: nowrap;
 }
 
-#saved > img {
+#saved > .gm-thumb {
   background: white;
+  max-width: 200px;
+  height: 100%;
+  position: relative;
+}
+
+.delete {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#saved img {
   max-width: 200px;
 }
