crosshair on canvas more suited for drawing

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@ h1 {
   font-family: "Ranchers", cursive;
 }
 
+canvas {
+  cursor: crosshair;
+}
+
 .icon-container {
   max-height: 25px;
   max-width: 25px;
